docs: add screenshots, update README, and fix project structure